 /* $Id: changelog,v 1.733 2000-02-16 14:16:33 sandervl Exp $ */

 2000-02-16: Sander van Leeuwen <sandervl@xs4all.nl>
	- KERNEL32/USER32/GDI32: Added new logging feature which allows users
                                 to disable or enable logging for separate source
                                 files. (see Logging.txt for details)

 2000-02-15: Sander van Leeuwen <sandervl@xs4all.nl>
	- USER32: SetWindowPos bugfix (returned before hiding or showing windows)
                  Fixes Delphi apps
	- KERNEL32: Fixed Release method of LX dlls (didn't delete object)
                    Fixed cpuhlp assembly functions (compiler changes calling
                    convention with optimizations on (stores parameter in eax
                    instead of on the stack)

 2000-02-14: Sander van Leeuwen <sandervl@xs4all.nl>
	- COMCTL32: Added Wine license
	- KERNEL32: Search in path for dlls if the pe loader can't find them
                    (RP7 loads pngu3264.dll by changing PATH and then calling
                     LoadLibrary)

 2000-02-14: Christoph Bratschi <cbratschi@datacomm.ch>
	- USER32: merged combobox with Corel 20000212
	- COMCTL32: merged treeview with Corel 20000212 and continued rewrite

 2000-02-12: Christoph Bratschi <cbratschi@datacomm.ch>
	- USER32: added v5.00 messages to wndmsg.cpp
	- GDI32: LineDDA fix

 2000-02-12: David Raison <djr@lemur.co.uk>
 	- OLE32: Fixed IsEqualIID issue

 2000-02-11: Vit Timchishin <tvv@sbs.kiev.ua>
	- KERNEL32: Fix for OpenFile; fill in OFSTRUCT even if api fails
                    (needed for Acrobat Reader 4.0)

 2000-02-10: Knut Stange Osmundsen (knut.stange.osmundsen@pmsc.no)
        - /tools/database/ + /src/makefile: Odin32 API DB.

 2000-02-10: Christoph Bratschi <cbratschi@datacomm.ch>
	- USER32: added some stubs
		  fixed wrong pixels at the right side of menu items
	- COMCTL32: implemented LVS_NOSORTHEADER
		    increased statusbar height (temporal hack)
		    first steps of treeview rewrite
